# baidu_speech

./: CMakeLists.txt  package.xml  readme  readme.md
launch/: simple_speaker.launch  simple_voice.launch  warning_speaker.launch
libs/python-vlc-1.1.2/: PKG-INFO  README
libs/speech_ Recognition/BaiduTtsSample/src/com/baidu/tts/sample/: MainActivity.java  ModelManagerActivity.java
libs/speech_ Recognition/doc/javaDoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
libs/speech_ Recognition/doc/javaDoc/com/baidu/tts/client/: SpeechError.html  SpeechSynthesizeBag.html  SpeechSynthesizer.html  SpeechSynthesizerListener.html  SynthesizerTool.html  TtsMode.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
libs/voice_conbine/BDVRClientSample/BDVRClientSample/: BDVRClientSample-Info.plist  BDVRClientSample-Prefix.pch  Localizable.strings  main.m
libs/voice_conbine/BDVRClientSample/BDVRClientSample.xcodeproj/: project.pbxproj
libs/voice_conbine/BDVRClientSample/BDVRClientSample.xcodeproj/project.xcworkspace/xcuserdata/baidu.xcuserdatad/: UserInterfaceState.xcuserstate
libs/voice_conbine/BDVRClientSample/BDVRClientSample.xcodeproj/xcuserdata/baidu.xcuserdatad/xcschemes/: BDVRClientSample.xcscheme  xcschememanagement.plist
libs/voice_conbine/BDVRClientSample/BDVRClientSample/Classes/: BDVRAppDelegate.h  BDVRAppDelegate.m  BDVRConstants.h  BDVRSConfig.h  BDVRSConfig.m
libs/voice_conbine/BDVRClientSample/BDVRClientSample/Classes/Views/: BDVRPickerTableViewCell.h  BDVRPickerTableViewCell.m  BDVRSettingViewController.h  BDVRSettingViewController.m  BDVRViewController.h  BDVRViewController.m
libs/voice_conbine/BDVRClientSample/BDVRClientSample/Classes/Views/CustomRecognitionView/: BDVRClientUIManager.h  BDVRClientUIManager.m  BDVRCustomRecognitonViewController.h  BDVRCustomRecognitonViewController.mm
libs/voice_conbine/BDVRClientSample/BDVRClientSample/Resources/: example_localRecord.pcm
libs/voice_conbine/BDVRClientSample/BDVRClientSample/en.lproj/: BDVRViewController.xib
libs/voice_conbine/BDVRClientSample/libBDVoiceRecognitionClient/: BDRecognizerViewDelegate.h  BDRecognizerViewParamsObject.h  BDTheme.h  BDVRDataUploader.h  BDVRFileRecognizer.h  BDVRRawDataRecognizer.h  BDVRUIPromptTextCustom.h  BDVoiceRecognitionClient.h
libs/voice_conbine/Headers/: BDRecognizerViewController.h
msg/: TTS_message.msg
src/: ParamSetting.py  fake_speak_string_pub.py  node_main.py  simple_speek.py  simple_speek.py~  simple_voice.py  voice_node.py  voice_wave.py
(+12 files in other folders)
