<?xml version="1.0"?>
<package>
  <name>simple_voice</name>
  <version>0.0.1</version>
  <description>The simple_voice package</description>
  <maintainer email="zhihao@iscas.ac.cn">zhihao</maintainer>

  <license>TODO</license>

  <author email="zhihao@iscas.ac.cn">zhihao</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
