<?xml version="1.0"?>
<package>
  <name>baidu_speech</name>
  <version>0.1.1</version>
  <description>The simple_voice package</description>
  <maintainer email="zhihao@iscas.ac.cn">zhihao</maintainer>

  <license>TODO</license>
  <url type="website">http://wiki.ros.org/baidu_speech</url>
  
  <author email="zhihao@iscas.ac.cn">zhihao</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
